...
  }

  static Future<void> _populateSampleLocations() async {
    await locationsBox.add(
      Location(
        id: 'loc1',
        name: 'Home',
        imagePaths: ['assets/images/home.png'],
      ),
    );
    await locationsBox.add(
      Location(id: 'loc2', name: 'Investment Property', imagePaths: []),
    );
    await locationsBox.add(
      Location(
        id: 'loc3',
        name: 'Office',
        imagePaths: ['assets/images/office.png'],
      ),
    );
    _logger.info("${locationsBox.length} sample locations added.");
  }

...
